--- a/src/app/feed/GameCard.module.scss
+++ b/src/app/feed/GameCard.module.scss
@@ -156,7 +156,7 @@
 .actionButton {
   width: 56px;
   height: 56px;
-  border-radius: 16px;
+  border-radius: 50%;
   border: none;
   background: transparent;
   color: #f4f5f7;
